<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_margin"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_margin"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/description_post_menu"
        app:cornerRadius="40dp"
        app:icon="@drawable/ic_more_vert_24"
        app:iconPadding="0dp"
        app:iconSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:strokeWidth="0dp"
        tools:ignore="ButtonStyle" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published, menu, author" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_margin"

        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like24"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginVertical="@dimen/common_margin"
        android:layout_marginTop="16dp"
        android:checkable="false"
        android:contentDescription="@string/description_post_like"
        android:gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        app:icon="@drawable/like_selector"
        app:iconGravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        tools:text="100" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginHorizontal="@dimen/common_margin"
        android:layout_marginVertical="@dimen/common_margin"
        android:gravity="center_vertical"
        android:text="5"
        app:icon="@drawable/ic_share_24"
        app:iconGravity="start"
        app:iconPadding="4dp"
        app:iconSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/like24"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        tools:text="5" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/views"
        style="@style/Widget.AppTheme.ViewsButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginVertical="@dimen/common_margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="100"
        app:icon="@drawable/ic_views_24"
        app:iconGravity="start"
        app:iconPadding="4dp"
        app:iconSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        tools:text="100" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="videoStub, videoPlayButton"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/videoStub"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorOnSurfaceVariant"
        android:contentDescription="@string/description_post_video_stub"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@drawable/ic_video_stub"
    tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/videoPlayButton"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/description_play_video"
        app:icon="@drawable/ic_play_24"
        app:iconSize="28dp"
        app:layout_constraintBottom_toBottomOf="@id/videoStub"
        app:layout_constraintEnd_toEndOf="@id/videoStub"
        app:layout_constraintTop_toTopOf="@id/videoStub" />


</androidx.constraintlayout.widget.ConstraintLayout>

